[project]
name = "comfyui_fluxmod"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lodestone-rock/ComfyUI_FluxMod"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FluxMod"
Icon = ""
