[project]
name = "ComfyUI_FluxMod"
description = "Nodes for use of Chroma model and other prototype models"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lodestone-rock/ComfyUI_FluxMod"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lodestone-rock"
DisplayName = "ComfyUI_FluxMod"
Icon = ""
